# flaggie

./: .gitignore  .gitmodules  COPYING  MANIFEST.in  README  flaggie  flaggie.py  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yaml
flaggie/: __init__.py  __main__.py  config.py  mangle.py  pm.py
lib/flaggie/: __init__.py  action.py  cache.py  cleanup.py  cli.py  makeconf.py  packagefile.py
test/: test_config.py  test_main.py  test_mangle.py  test_pm.py
